@@ -1707,6 +1707,19 @@ Short(s): \n\r\
 Turn off MXP (MUD Exchange Protocol) tags.  You may use the \
 MXP command to turn them on, if your mud client supports them.
 
+NOSELL=\
+Usage   : NOSELL (ON/OFF) [ITEM NAMES]\n\r\
+Example : nosell dagger\n\r\
+Example : nosell on all\n\r\
+Short(s): \n\r\
+This command can flag an item in the players inventory as being \
+unsellable, allowing the player to do sell all without \
+accidentally selling things they don't want to.  By default, \
+NOSELL [ITEM] will toggle the flag, while NOSELL ON [ITEM} will \
+always turn it on, and OFF will turn it off.\n\r\
+\n\r\
+Dropping an item marked unsellable will also remove the flag.
+
 NOSOUND=NOSOUNDS
 NOMSP=NOSOUNDS
 NOSOUNDS=\
